--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>basic</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>com.webir</groupId>
+    <artifactId>proyecto</artifactId>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>TweetsPoliticos</name>
@@ -46,6 +46,24 @@
            <artifactId>twitter4j-core</artifactId>
            <version>[4.0,)</version>
        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch-x-content</artifactId>
+            <version>6.4.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>6.4.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>6.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
