--- a/frontend/WebIR2018FrontendG18/package.json
+++ b/frontend/WebIR2018FrontendG18/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
+    "angular": "^1.7.5",
+    "chart.js": "^2.7.3",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "ng2-charts": "^1.6.0",
     "popper": "^1.0.1",
     "rxjs": "^5.5.12",
     "zone.js": "^0.8.14"
